fix: Header button click error removed
- resets the scrollbar styling across old and new app windows

--- a/src/styles/module.less
+++ b/src/styles/module.less
@@ -1348,13 +1348,21 @@ END COMMON STRUCTURAL STYLES
 =====================================================================
 */
 
-#fab-tw-application-container {
-  @import (inline) "preflight-reset.css";
-
+.scrollbar-reset {
   * {
     scrollbar-color: initial;
     scrollbar-width: initial;
   }
+}
+
+.fab-application-container {
+  .scrollbar-reset();
+}
+
+#fab-tw-application-container {
+  @import (inline) "preflight-reset.css";
+
+  .scrollbar-reset();
 
   a {
     &:hover {
